[metadata]
name = pytest-dash
version = attr: pytest_dash.__version__
author = Philippe Duval
author_email = philippe@plot.ly
description = pytest fixtures to run dash app.
long_description = file: README.md
keywords = dash, plotly, pytest
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Pytest

[options]
packages =
    pytest_dash
install_requires =
    pytest
    pytest-selenium
    percy
    flask
    requests
    dash

[options.entry_points]
pytest11 =
    pytest_dash = pytest_dash.tools
