[metadata]
name = pytest-dash
version = attr: pytest_dash.__version__
author = Philippe Duval
author_email = philippe@plot.ly
description = pytest fixtures to run dash app.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dash, plotly, pytest
url = https://github.com/T4rk1n/pytest-dash
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Framework :: Pytest
    Framework :: Flask
    Intended Audience :: Developers
    Topic :: Software Development :: Testing

[options]
packages =
    pytest_dash
install_requires =
    pytest
    pytest-selenium
    percy
    flask
    requests
    dash
    waitress

[options.entry_points]
pytest11 =
    pytest_dash = pytest_dash.fixtures
