[metadata]
name = pytest-dash
version = attr: pytest_dash.__version__
author = Philippe Duval
author_email = philippe@plot.ly
description = pytest fixtures to run dash applications.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dash, plotly, pytest
url = https://github.com/plotly/pytest-dash
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Framework :: Pytest
    Framework :: Flask
    Intended Audience :: Developers
    Topic :: Software Development :: Testing

[options]
packages =
    pytest_dash
install_requires =
    pytest
    percy
    flask
    requests
    dash
    waitress
    ruamel.yaml
    selenium
    lark-parser

[options.entry_points]
pytest11 =
    pytest_dash = pytest_dash.plugin

[yapf]
based_on_style = pep8
dedent_closing_brackets = true
coalesce_brackets = true
each_dict_entry_on_separate_line = true
split_before_closing_bracket = true
split_before_first_argument= true
